--- a/index.html
+++ b/index.html
@@ -310,21 +310,22 @@ body {
     </div>
 
     <div class="actions">
-      <!-- YES form -->
-      <form name="date-responses" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+      <!-- YES Button -->
+        <form name="date-responses" method="POST" data-netlify="true" netlify-honeypot="bot-field" onsubmit="handleSubmit(event, 'YES - Accepted the date invitation! 💕')">
         <input type="hidden" name="response" value="YES - Accepted the date invitation! 💕" />
         <input type="hidden" name="timestamp" value="" />
         <input type="hidden" name="user-agent" value="" />
-        <button type="submit" class="btn btn-primary" onclick="fillMeta(this.form)">yes 💕</button>
-      </form>
+        <button type="submit" class="btn btn-primary">yes 💕</button>
+        </form>
 
-      <!-- NO form -->
-      <form name="date-responses" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+        <!-- NO Button -->
+        <form name="date-responses" method="POST" data-netlify="true" netlify-honeypot="bot-field" onsubmit="handleSubmit(event, 'NO - Declined the date invitation 😢')">
         <input type="hidden" name="response" value="NO - Declined the date invitation 😢" />
         <input type="hidden" name="timestamp" value="" />
         <input type="hidden" name="user-agent" value="" />
-        <button type="submit" class="btn btn-secondary" onclick="fillMeta(this.form)">no</button>
-      </form>
+        <button type="submit" class="btn btn-secondary">no</button>
+        </form>
+
     </div>
 
     <div class="footer">Made with my heart - harvey</div>
@@ -332,87 +333,83 @@ body {
 </div>
 
 <script>
-function fillMeta(form) {
-  form.querySelector('[name="timestamp"]').value = new Date().toISOString();
-  form.querySelector('[name="user-agent"]').value = navigator.userAgent;
-}
+  // Floating hearts
+  function createFloatingHeart() {
+    const heart = document.createElement('div');
+    heart.className = 'floating-heart';
+    heart.innerHTML = ['💕', '💖', '💗', '💝', '🌸'][Math.floor(Math.random() * 5)];
+    heart.style.left = Math.random() * 100 + '%';
+    heart.style.animationDelay = Math.random() * 8 + 's';
+    heart.style.fontSize = (Math.random() * 10 + 15) + 'px';
+    document.body.appendChild(heart);
+    setTimeout(() => { if (heart.parentNode) heart.parentNode.removeChild(heart); }, 8000);
+  }
+  setInterval(createFloatingHeart, 1000);
 
-// Floating hearts animation
-function createFloatingHeart() {
-  const heart = document.createElement('div');
-  heart.className = 'floating-heart';
-  heart.innerHTML = ['💕', '💖', '💗', '💝', '🌸'][Math.floor(Math.random() * 5)];
-  heart.style.left = Math.random() * 100 + '%';
-  heart.style.animationDelay = Math.random() * 8 + 's';
-  heart.style.fontSize = (Math.random() * 10 + 15) + 'px';
-  document.getElementById('floatingHearts').appendChild(heart);
-  setTimeout(() => { if (heart.parentNode) heart.parentNode.removeChild(heart); }, 8000);
-}
-setInterval(createFloatingHeart, 1000);
+  // Sparkles
+  function createSparkle() {
+    const sparkle = document.createElement('div');
+    sparkle.className = 'sparkle';
+    sparkle.innerHTML = '✨';
+    sparkle.style.left = Math.random() * 100 + '%';
+    sparkle.style.top = Math.random() * 100 + '%';
+    sparkle.style.animationDelay = Math.random() * 2 + 's';
+    document.body.appendChild(sparkle);
+    setTimeout(() => { if (sparkle.parentNode) sparkle.parentNode.removeChild(sparkle); }, 2000);
+  }
+  setInterval(createSparkle, 800);
 
-// Sparkles animation
-function createSparkle() {
-  const sparkle = document.createElement('div');
-  sparkle.className = 'sparkle';
-  sparkle.innerHTML = '✨';
-  sparkle.style.left = Math.random() * 100 + '%';
-  sparkle.style.top = Math.random() * 100 + '%';
-  sparkle.style.animationDelay = Math.random() * 2 + 's';
-  document.getElementById('sparkles').appendChild(sparkle);
-  setTimeout(() => { if (sparkle.parentNode) sparkle.parentNode.removeChild(sparkle); }, 2000);
-}
-setInterval(createSparkle, 800);
+  // Success popup
+  function showSuccess(message) {
+    const success = document.createElement('div');
+    success.className = 'success';
+    success.innerHTML = `<div style="text-align: center;">
+      <div style="font-size: 36px; margin-bottom: 12px;">✨💕</div>
+      <div style="font-weight: 700; color: #4A5568; margin-bottom: 8px;">Yay!</div>
+      <div style="color: #718096; font-size: 14px;">${message}</div></div>`;
+    document.body.appendChild(success);
+    setTimeout(() => { success.remove(); }, 3000);
+  }
 
-// Success popup
-function showSuccess(message) {
-  const success = document.createElement('div');
-  success.className = 'success';
-  success.innerHTML = `<div style="text-align: center;">
-    <div style="font-size: 36px; margin-bottom: 12px;">✨</div>
-    <div style="font-weight: 700; color: #4A5568; margin-bottom: 8px;">Yay!</div>
-    <div style="color: #718096; font-size: 14px;">${message}</div></div>`;
-  document.body.appendChild(success);
-  setTimeout(() => { success.remove(); }, 3000);
-}
+  // Sadness popup
+  function showSadness(message) {
+    const sadness = document.createElement('div');
+    sadness.className = 'success';
+    sadness.innerHTML = `<div style="text-align: center;">
+      <div style="font-size: 36px; margin-bottom: 12px;">😢</div>
+      <div style="font-weight: 700; color: #4A5568; margin-bottom: 8px;">Aww...</div>
+      <div style="color: #718096; font-size: 14px;">${message}</div></div>`;
+    document.body.appendChild(sadness);
+    setTimeout(() => { sadness.remove(); }, 3000);
+  }
 
-// Sadness popup
-function showSadness(message) {
-  const sadness = document.createElement('div');
-  sadness.className = 'success';
-  sadness.innerHTML = `<div style="text-align: center;">
-    <div style="font-size: 36px; margin-bottom: 12px;">😢</div>
-    <div style="font-weight: 700; color: #4A5568; margin-bottom: 8px;">Aww...</div>
-    <div style="color: #718096; font-size: 14px;">${message}</div></div>`;
-  document.body.appendChild(sadness);
-  setTimeout(() => { sadness.remove(); }, 3000);
-}
+  // ✅ Netlify form handler (keeps user on page)
+  async function handleSubmit(event, responseText) {
+    event.preventDefault();
 
-// Listen for form submissions to show animation
-document.addEventListener("submit", function (e) {
-  if (e.target.name === "date-responses") {
-    const resp = e.target.querySelector('[name="response"]').value;
-    if (resp.startsWith("YES")) {
-      showSuccess("See you! 💕 Can’t wait for our date!");
-    } else {
-      showSadness("Maybe next time... 😔");
+    const form = event.target;
+    const data = new FormData(form);
+
+    data.set("timestamp", new Date().toISOString());
+    data.set("user-agent", navigator.userAgent);
+
+    try {
+      await fetch("/", {
+        method: "POST",
+        body: new URLSearchParams(data).toString(),
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+      });
+
+      if (responseText.startsWith("YES")) {
+        showSuccess("See you! 💕 Can’t wait for our date!");
+      } else {
+        showSadness("Maybe next time... 😔");
+      }
+    } catch (err) {
+      alert("Something went wrong. Please try again.");
     }
   }
-});
-
-// URL params
-(function() {
-  const params = new URLSearchParams(location.search);
-  const when = params.get('when');
-  const where = params.get('where');
-  const title = params.get('title');
-  const dress = params.get('dress');
-  if (when) document.getElementById('when').textContent = decodeURIComponent(when);
-  if (where) document.getElementById('where').textContent = decodeURIComponent(where);
-  if (dress) document.getElementById('dress').textContent = decodeURIComponent(dress);
-  if (title) document.querySelector('.title').textContent = decodeURIComponent(title);
-})();
-for (let i = 0; i < 5; i++) setTimeout(createSparkle, i * 200);
-for (let i = 0; i < 3; i++) setTimeout(createFloatingHeart, i * 500);
 </script>
+
 </body>
 </html>
