--- a/index.html
+++ b/index.html
@@ -283,14 +283,14 @@ body {
     <div class="sparkles" id="sparkles"></div>
     <div class="heart-icon"></div>
     <h1 class="title">HI RICA INVITE SANA KITA SA DATE</h1>
-    <p class="subtitle">An evening of laughter, good food, and simple moments — just the two of us! 💖</p>
+    <p class="subtitle">just the two of us lang sana! 💖</p>
 
     <div class="details">
       <div class="detail-item">
         <div class="detail-icon when-icon">📅</div>
         <div class="detail-content">
           <div class="detail-label">When</div>
-          <div class="detail-value" id="when">Friday, Sept 19, 2025 · 6:00 PM</div>
+          <div class="detail-value" id="when">Friday, Sept 26, 2025 · 6:00 PM</div>
         </div>
       </div>
       <div class="detail-item">
